force-app/main/default/objects/Target_Owner__c/Target_Owner__c.object-meta.xml
<CustomObject>
    <label>Target Owner</label>
    <nameField>
        <label>Target Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>