force-app/main/default/objects/Target_Owner__c/fields/Apply_For_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Apply_For_Dealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply For Dealer</label>
    <type>Checkbox</type>
</CustomField>