force-app/main/default/objects/Target_Owner__c/fields/Current_Quantity_Reached__c.field-meta.xml
<CustomField>
    <fullName>Current_Quantity_Reached__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Quantity Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>