force-app/main/default/objects/Target_Owner__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Dealer Account should be picked.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Target Owners</relationshipLabel>
    <relationshipName>Target_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>