force-app/main/default/objects/Target_Owner__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Target Owners</relationshipLabel>
    <relationshipName>Target_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>