force-app/main/default/objects/Target_Owner__c/fields/Incentive_Availed__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Availed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Availed</label>
    <type>Checkbox</type>
</CustomField>