force-app/main/default/objects/Target_Owner__c/fields/Percent_Of_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Percent_Of_Target_Achieved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent Of Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>