force-app/main/default/objects/Target_Owner__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Target Owners</relationshipLabel>
    <relationshipName>Target_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>