force-app/main/default/objects/Target_Owner__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <formula>Target__r.Target_Product__r.Name</formula>
    <label>Target Product</label>
    <type>Text</type>
</CustomField>