force-app/main/default/objects/Target_Owner__c/fields/Target_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Target_Quantity__c</fullName>
    <formula>Target__r.Quantity_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>