force-app/main/default/objects/Target_Owner__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <formula>Target__r.Revenue_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>