force-app/main/default/objects/Target_Owner__c/validationRules/Either_Dealer_Or_Salesrep_Should_Pick.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Dealer_Or_Salesrep_Should_Pick</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
(AND(ISBLANK(Dealer__c),ISBLANK(Salesrep__c))),
AND( NOT(ISBLANK(Dealer__c)),NOT(ISBLANK(Salesrep__c)))
)</errorConditionFormula>
    <errorMessage>Either Salerep Or Dealer Should be picked.</errorMessage>
</ValidationRule>