force-app/main/default/objects/Target_Owner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Dealer__c</columns>
    <columns>Salesrep__c</columns>
    <columns>Current_Revenue_Reached__c</columns>
    <columns>Current_Quantity_Reached__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>